[package]
name = "line-col"
description = "Convert string slice indices into line/column numbers"
repository = "https://github.com/TheBerkin/line-col-rs"
version = "0.2.0"
readme = "README.md"
keywords = ["str", "line", "column", "parsing", "lookup"]
categories = ["algorithms", "caching"]
authors = ["Nicholas Fleck <TheBerkin@users.noreply.github.com>"]
license = "MIT"
edition = "2018"

# Make sure docs.rs shows grapheme-clusters stuff
[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
grapheme-clusters = ["unicode-segmentation"]
default = []

[dependencies]
unicode-segmentation = { version = "1.6.0", optional = true }